ci(regression/core): add inital setup to run regression tests for core

--- a/packages/core/src/components/button/test/basic/index.html
+++ b/packages/core/src/components/button/test/basic/index.html
@@ -9,24 +9,9 @@ COPYRIGHT (c) Siemens AG 2018-2022 ALL RIGHTS RESERVED.
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
     />
     <title>Stencil Component Starter</title>
-    <script
-      type="module"
-      src="http://127.0.0.1:8080/www/build/core-ui-core.esm.js"
-    ></script>
-    <script
-      nomodule=""
-      src="http://127.0.0.1:8080/www/build/core-ui-core.js"
-    ></script>
-    <link
-      rel="stylesheet"
-      href="http://127.0.0.1:8080/www/build/core-ui-core.css"
-    />
-    <link
-      rel="stylesheet"
-      href="http://127.0.0.1:8080/www/uild/core-ui-webfont/css/core-ui-webfont.css"
-    />
   </head>
   <body>
     <cw-button>Hallo</cw-button>
+    <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
