--- a/packages/core/scss/v7/components/_dropdown.scss
+++ b/packages/core/scss/v7/components/_dropdown.scss
@@ -57,7 +57,8 @@
 .dropdown-menu {
   background-color: var(--theme-menu--background);
   @include text-default-single;
-  border: var(--theme-menu--border-thickness) solid var(--theme-menu--border--color);
+  border: var(--theme-menu--border-thickness) solid
+    var(--theme-menu--border--color);
   border-radius: var(--theme-menu--border-radius);
   max-width: 100vw;
   padding: $tiny-space 0;
@@ -96,6 +97,11 @@
   padding: 0 $x-large-space;
   border: 1px solid transparent;
   color: var(--theme-menu-item--color);
+
+  &:focus {
+    background-color: var(--theme-menu-item--background);
+    color: var(--theme-menu-item--color);
+  }
 
   &:focus-visible {
     outline: none;
