--- a/packages/core/src/components/dropdown/dropdown.scss
+++ b/packages/core/src/components/dropdown/dropdown.scss
@@ -1,3 +1,13 @@
+@import '~bootstrap/scss/functions';
+@import './../../../scss/v7/common-variables';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins';
+@import '~bootstrap/scss/dropdown';
+
+@import './../../../scss/v7/mixins/fonts';
+@import './../../../scss/v7/mixins/text-truncation';
+@import './../../../scss/v7/components/dropdown';
+
 :host {
   min-width: 0px;
 }
