--- a/packages/core/scss/v7/theme/classic-light/_sizes.scss
+++ b/packages/core/scss/v7/theme/classic-light/_sizes.scss
@@ -12,6 +12,8 @@ $classic-light-sizes: (
   checkbox--border-thickness: 2px,
   checkbox--focus--outline-offset: 1px,
   focus--border-thickness: 0.0625rem,
+  group--border-radius: 4px,
+  group--border-radius--focus: 0,
   radiobtn--border-thickness: 2px,
   radiobtn--focus--outline-offset: 1px,
   input--border-radius: 2px,
