--- a/packages/core/src/components/icon/icon.scss
+++ b/packages/core/src/components/icon/icon.scss
@@ -17,6 +17,11 @@
   }
 }
 
+:host(.size-12) {
+  height: $medium-space;
+  width: $medium-space;
+}
+
 :host(.size-16) {
   height: $default-space;
   width: $default-space;
