--- a/packages/core/src/components/menu-settings/cw-menu-settings.scss
+++ b/packages/core/src/components/menu-settings/cw-menu-settings.scss
@@ -1,10 +1,13 @@
 /*
  * COPYRIGHT (c) Siemens AG 2018-2022 ALL RIGHTS RESERVED.
  */
+@import '../../../scss/v7/common-variables';
+@import '../../../scss/v7/fonts';
 
- :host {
+:host {
   display: block;
-  padding: 0.8125rem 1.875rem;
+  background-color: var(--theme-nav-overlay--background);
+  padding: $medium-space $default-space $default-space $x-large-space;
   flex-grow: 1;
   position: absolute;
   width: 100%;
@@ -15,9 +18,16 @@
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
+    height: $x-large-space;
+    margin-bottom: $small-space;
+
+    h2 {
+      color: var(--theme-nav-overlay-header--color);
+      margin-bottom: 0;
+    }
   }
 
   .settings-tabs {
-    margin-bottom: 1.5rem;
+    margin-bottom: $large-space;
   }
 }
