--- a/packages/core/src/components/my-component/my-component.scss
+++ b/packages/core/src/components/my-component/my-component.scss
@@ -1,3 +1,5 @@
+@import '../../../scss/v7/common-variables';
+
 :host {
   display: flex;
   flex-direction: column;
@@ -5,6 +7,11 @@
   height: 100vh;
 
   main {
-    margin: 2rem;
+    width: 100%;
+    padding: 2rem;
+  }
+
+  cw-chip {
+    margin-block-end: $default-space;
   }
 }
