feat(core/toggle): add v7 styling, keyboard access and indeterminate state

--- a/packages/core/scss/v7/theme/classic-dark/_sizes.scss
+++ b/packages/core/scss/v7/theme/classic-dark/_sizes.scss
@@ -34,6 +34,7 @@ $classic-dark-sizes: (
     0.5rem 0 1rem #000,
   ),
   modal--border-thickness: 1px,
+  switch-thumb--box-shadow: none,
   tile--border-radius: 0.25rem,
   tile--box-shadow: (
     0 0 8px rgba(0, 0, 0, 0.6),
