--- a/packages/core/scss/v7/theme/classic-light/_sizes.scss
+++ b/packages/core/scss/v7/theme/classic-light/_sizes.scss
@@ -34,6 +34,7 @@ $classic-light-sizes: (
     0.5rem 0 1rem rgba(0, 0, 0, 0.2),
   ),
   modal--border-thickness: 1px,
+  switch-thumb--box-shadow: none,
   tile--border-radius: 0.25rem,
   tile--box-shadow: (
     0 0 8px rgba(0, 0, 0, 0.1),
