refactor(core/colors): change static focus border colors definitions to custom properties

--- a/packages/core/scss/v7/components/_checkboxes.scss
+++ b/packages/core/scss/v7/components/_checkboxes.scss
@@ -47,14 +47,14 @@
 
   [type='checkbox'] + label:focus {
     &:before {
-      outline: 1px solid #199fff;
+      outline: 1px solid var(--focus--border-color);
       outline-offset: var(--theme-checkbox--focus--outline-offset);
     }
   }
 
   [type='checkbox']:focus + label {
     &:before {
-      outline: 1px solid #199fff;
+      outline: 1px solid var(--focus--border-color);
       outline-offset: var(--theme-checkbox--focus--outline-offset);
     }
   }
