--- a/packages/core/scss/v7/components/_buttons.scss
+++ b/packages/core/scss/v7/components/_buttons.scss
@@ -57,7 +57,7 @@ $button-categories: (primary, secondary);
     &.focus,
     &:focus,
     &:focus-visible {
-      outline: 1px solid #199fff;
+      outline: 1px solid var(--focus--border-color);
       outline-offset: var(--theme-btn--focus--outline-offset);
     }
 
