feat(core/colors): update colors and generate theme

--- a/packages/core/scss/v7/theme/classic-dark/_variables.scss
+++ b/packages/core/scss/v7/theme/classic-dark/_variables.scss
@@ -10,7 +10,7 @@ $classic-dark: (
     color-critical: #eb780a,
     color-warning: #ffb900,
     color-success: #339b00,
-    color-info: #1e54b3,
+    color-info: #266ce6,
     color-neutral: #879bab,
     color-1: #10181c,
     color-2: #172126,
@@ -520,12 +520,12 @@ $classic-dark: (
     color-success-40: rgba(51, 155, 0, 0.4),
     color-info-40: rgba(30, 84, 179, 0.4),
     color-neutral-40: rgba(135, 155, 171, 0.4),
-    chart-tootlip-bdrdelete: rgba(255, 255, 255, 0.2),
-    chart-ticksdelete: rgba(255, 255, 255, 0.3),
-    chart-tootlip-bgdelete: rgba(0, 0, 0, 0.8),
-    chart-grid-linesdelete: rgba(255, 255, 255, 0.1),
-    chart-grid-bgdelete: #10181c,
-    chart-axesdelete: rgba(255, 255, 255, 0.3),
+    chart-tooltip-bdr: rgba(255, 255, 255, 0.2),
+    chart-ticks: rgba(255, 255, 255, 0.3),
+    chart-tooltip-fill: rgba(0, 0, 0, 0.8),
+    chart-grid-lines: rgba(255, 255, 255, 0.1),
+    chart-grid-fill: #10181c,
+    chart-axes: rgba(255, 255, 255, 0.3),
     chart-1: #00ebd5,
     chart-1-40: rgba(0, 173, 157, 0.4),
     chart-2-40: rgba(0, 215, 160, 0.4),
@@ -560,5 +560,43 @@ $classic-dark: (
     chart-16-: #ad988f,
     chart-17-40: rgba(181, 189, 0, 0.4),
     chart-17: #b5bd00,
+    input-unit--color: rgba(255, 255, 255, 0.6),
+    input-search-icon--color: rgba(255, 255, 255, 0.85),
+    input-search-icon--color--hover: rgba(255, 255, 255, 0.85),
+    input-search-icon--color--focus: rgba(255, 255, 255, 0.85),
+    input-search-icon--color--disabled: rgba(255, 255, 255, 0.3),
+    input-gripper--color: rgba(235, 240, 245, 0.6),
+    color-alarm-text: #ff99af,
+    messagebar--background: #10181c,
+    messagebar--color: rgba(255, 255, 255, 0.85),
+    modal--border-color: rgba(235, 240, 245, 0.4),
+    modal--background: #10181c,
+    color-shadow-1: rgba(0, 0, 0, 0.6),
+    color-shadow-2: rgba(0, 0, 0, 0.6),
+    color-shadow-3: #000,
+    color-shadow-4: #000,
+    group-item--background: rgba(114, 167, 194, 0.2),
+    group-item--background--hover: rgba(153, 191, 211, 0.26),
+    group-item--background--active: rgba(177, 206, 221, 0.31),
+    group-item--background--selected: rgba(50, 160, 160, 0.25),
+    group-item--background--disabled: rgba(134, 161, 174, 0.1),
+    group-item--border-color: rgba(0, 0, 0, 0),
+    group-item--border-color--hover: rgba(0, 0, 0, 0),
+    group-item--border-color--active: rgba(0, 0, 0, 0),
+    group-item--border-color--selected: #41aaaa,
+    group-item--border-color--disabled: rgba(0, 0, 0, 0),
+    group-item-indicator--background: rgba(0, 0, 0, 0),
+    group-item-indicator--background--selected: #41aaaa,
+    group-item-indicator--background--subselected: #41aaaa,
+    group-node-closed--color: rgba(255, 255, 255, 0.85),
+    group-node-open--color: rgba(255, 255, 255, 0.85),
+    group-header--color: rgba(255, 255, 255, 0.85),
+    group-subheader--color: rgba(255, 255, 255, 0.85),
+    group-item-icon--color: rgba(255, 255, 255, 0.85),
+    group-item-text--color: rgba(255, 255, 255, 0.85),
+    group-item-subtext--color: rgba(255, 255, 255, 0.6),
+    group-item-icon--color--disabled: rgba(255, 255, 255, 0.3),
+    group-item-text--color--disabled: rgba(255, 255, 255, 0.3),
+    group-item-subtext--color--disabled: rgba(255, 255, 255, 0.3),
 
 );
