--- a/packages/core/scss/v7/theme/classic-light/_variables.scss
+++ b/packages/core/scss/v7/theme/classic-light/_variables.scss
@@ -524,12 +524,12 @@ $classic-light: (
     color-success-40: rgba(51, 155, 0, 0.4),
     color-info-40: rgba(30, 84, 179, 0.4),
     color-neutral-40: rgba(135, 155, 171, 0.4),
-    chart-tootlip-bdrdelete: rgba(0, 0, 0, 0.2),
-    chart-tootlip-bgdelete: rgba(255, 255, 255, 0.8),
-    chart-grid-linesdelete: rgba(0, 0, 0, 0.1),
-    chart-axesdeletedelete: rgba(0, 0, 0, 0.3),
-    chart-grid-bgdelete: #fff,
-    chart-ticksdelete: rgba(0, 0, 0, 0.3),
+    chart-tooltip-bdr: rgba(0, 0, 0, 0.2),
+    chart-tooltip-fill: rgba(255, 255, 255, 0.8),
+    chart-grid-lines: rgba(0, 0, 0, 0.1),
+    chart-axes: rgba(0, 0, 0, 0.3),
+    chart-grid-fill: #fff,
+    chart-ticks: rgba(0, 0, 0, 0.3),
     chart-1: #00b8a6,
     chart-2: #007362,
     chart-2-40: rgba(0, 115, 98, 0.4),
@@ -564,5 +564,43 @@ $classic-light: (
     chart-17: #909700,
     chart-17-40: rgba(144, 151, 0, 0.4),
     chart-1-40: rgba(0, 133, 120, 0.4),
+    input-unit--color: rgba(0, 0, 0, 0.6),
+    input-search-icon--color: rgba(0, 0, 0, 0.75),
+    input-search-icon--color--hover: rgba(0, 0, 0, 0.75),
+    input-search-icon--color--focus: rgba(0, 0, 0, 0.75),
+    input-search-icon--color--disabled: rgba(0, 0, 0, 0.3),
+    input-gripper--color: rgba(65, 95, 117, 0.6),
+    color-alarm-text: #c10118,
+    messagebar--background: #fff,
+    messagebar--color: rgba(0, 0, 0, 0.75),
+    modal--background: #fff,
+    modal--border-color: rgba(65, 95, 117, 0.4),
+    color-shadow-1: rgba(0, 0, 0, 0.1),
+    color-shadow-2: rgba(0, 0, 0, 0.1),
+    color-shadow-3: rgba(0, 0, 0, 0.1),
+    color-shadow-4: rgba(0, 0, 0, 0.2),
+    group-item--background: rgba(135, 155, 170, 0.25),
+    group-item--background--hover: rgba(112, 128, 140, 0.29),
+    group-item--background--active: rgba(93, 107, 118, 0.33),
+    group-item--background--selected: rgba(50, 160, 160, 0.25),
+    group-item--background--disabled: rgba(144, 154, 161, 0.1),
+    group-item--border-color: rgba(65, 95, 117, 0),
+    group-item--border-color--hover: rgba(0, 0, 0, 0),
+    group-item--border-color--active: rgba(0, 0, 0, 0),
+    group-item--border-color--selected: #0e777c,
+    group-item--border-color--disabled: rgba(0, 0, 0, 0),
+    group-item-indicator--background: rgba(0, 0, 0, 0),
+    group-item-indicator--background--selected: #0e777c,
+    group-item-indicator--background--subselected: #0e777c,
+    group-node-closed--color: rgba(0, 0, 0, 0.75),
+    group-node-open--color: rgba(0, 0, 0, 0.75),
+    group-header--color: rgba(0, 0, 0, 0.75),
+    group-subheader--color: rgba(0, 0, 0, 0.75),
+    group-item-icon--color: rgba(0, 0, 0, 0.75),
+    group-item-text--color: rgba(0, 0, 0, 0.75),
+    group-item-subtext--color: rgba(0, 0, 0, 0.6),
+    group-item-icon--color--disabled: rgba(0, 0, 0, 0.3),
+    group-item-text--color--disabled: rgba(0, 0, 0, 0.3),
+    group-item-subtext--color--disabled: rgba(0, 0, 0, 0.3),
 
 );
